feat: nginx with lua to generate web gateway that injects Navia into another web page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navia - Tu Asistente de Eventos Inteligente</title>
+    <title>Navia - No navegues, surfea el internet</title>
     <meta name="description" content="Navia te ayuda a descubrir, comprar y navegar eventos de forma inteligente y conversacional" />
     <meta name="author" content="Lovable" />
 
